2007-02-02  Nurdin Premji  <npremji@redhat.com>

	* TestStackFrame.java (frameTest.Terminator.updateSignaled): Optimized to call
	toPrint only once.
	Changed line numbers to be regex's.
	* StackFrame.java (toPrint): Merged frameToString method into here.
	(frameToString): Removed.
	(getSymbolName): Added.
	(getMethodName): Changed to return null rather than empty string. 

2007-02-02  Andrew Cagney  <cagney@redhat.com>

	* TestStackFrame.java (testStaticAsmNoSize): Fix line number to
	match assembler.

2007-02-02  Nurdin Premji  <npremji@redhat.com>

	* TestStackFrame.java (testAsmNoSize): Update from change of funit-stackframe-asm.S.
	(testStaticAsmNoSize): Ditto funit-stackframe-static-asm.S.

2007-02-02  Andrew Cagney  <cagney@redhat.com>

	* TestStackBacktrace.java: Update to match
	frysk.sys.proc.MapsBuilder change, permPrivate removed.

2007-02-01  Nurdin Premji  <npremji@redhat.com>

	* TestStackFrame.java: Cleaned up common strings.
	(testAsmNoSize): Added.
	(testAsmNoDebugNoSize): Ditto.
	(testAsmStrippedNoSize): Ditto.
	(testStaticAsmNoSize): Ditto.
	(testStaticAsmNoDebugNoSize): Ditto.
	(testStaticAsmStrippedNoSize): Ditto.

2007-01-26  Nurdin Premji  <npremji@redhat.com>

	* TestStackFrame.java (testStaticDebug): Added.
	(testStaticNoDebug): Added.
	(testStaticStripped): Added.

2007-01-25  Nurdin Premji  <npremji@redhat.com>

	* StackFactory.java (generateTaskStackTrace): Moved here from:
	frysk.util.StacktraceAction.
	* TestStackFrame: Added.

2007-01-23  Andrew Cagney  <cagney@redhat.com>

	* StackFrame.java: Do not import gnu.gcj.RawDataManaged.
	(unwind_data): Delete field.
	(getUnwindData): Delete method.

	* StackFrame.java: Remove TaskExceptoin code.

	* TestStackBacktrace.java: Remove TaskException code.
	* TestRunState.java: Ditto.
	* RunState.java: Ditto.
	* StackCallbacks.java: Ditto.
	* TestStepping.java: Ditto.
	* StackFactory.java: Ditto.

2007-01-23  npremji  <npremji@tow.toronto.redhat.com>
